--- a/index.html
+++ b/index.html
@@ -22,5 +22,32 @@
         <img class="lead__image" src="./images/kalegin-michail.png" alt="mountains in the distance">
         <p class="lead__caption">Your journey starts here</p>
     </section>
+
+    <section class="intro">
+        <h2 class="intro__title">Know the country you live in a little better</h2>
+        <p class="intro__text">That's exactly what we have arranged for you via this travel story</p>
+        <p class="intro__text">Need more action and adventure in your life instead of the same old routine? From Portland, Maine to Portland, Oregon we're going to take you on an exciting journey through some unknown regions of your country. Leave the car at home and travel by bike starting in New England where it all began. You will pass through 12 beautiful states, covering a total of 3,600 miles, and accomplish 3 monumental missions. Partying and taking a selfie with a famous rock star, donating $1 to a billionaire to help eradicate polio in Africa, and even stopping by famous author Stephen King's house to say hi and asking him to sign your favorite book.</p>
+        <ul class="intro__list">
+            <li><span class=" intro__list intro__list_weight_bold">Distance (miles) </span>3,644</li>
+            <li><span class="intro__list intro__list_weight_bold"> Travel time (days) </span>22</li>
+            <li><span class="intro__list intro__list_weight_bold">Highest point (feet) </span>9,613</li>
+            <li><span class="intro__list intro__list_weight_bold">Lowest point (feet) </span>-3</li>   
+        </ul>
+    </section>
+
+    <section class="photo-grid">
+        <img class="photo-grid__item" src="./images/grid_1_1.png" alt="road on the cost">
+        <img class="photo-grid__item" src="./images/grid_1_2.png" alt="lake">
+        <img class="photo-grid__item" src="./images/grid_1_3.png" alt="flock of birds">
+        <img class="photo-grid__item" src="./images/grid_1_4.png" alt="forested mountains">
+        <img class="photo-grid__item" src="./images/grid_2_1.png" alt="lake with morning haze">
+        <img class="photo-grid__item" src="./images/grid_2_2.png" alt="mountains in the distance">
+        <img class="photo-grid__item" src="./images/grid_2_3.png" alt="rocky mountains in the distance">
+        <img class="photo-grid__item" src="./images/grid_2_4.png" alt="white flowre">
+        <img class="photo-grid__item" src="./images/grid_3_1.png" alt="grassy hills">
+        <img class="photo-grid__item" src="./images/grid_3_2.png" alt="an oasis">
+        <img class="photo-grid__item" src="./images/grid_3_3.png" alt="road on the cost">
+        <img class="photo-grid__item" src="./images/grid_3_4.png" alt="road on the cost">
+    </section>
 </body>
 </html>
