--- a/index.html
+++ b/index.html
@@ -5,49 +5,134 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
-    <title>From Portland to Portland</title>
+    <title>From Homeland to Homeland</title>
 </head>
 <body class="page">
     <header class="header">
-        <img src="./images/header_logo.png" alt="page logo. displays a little map of the USA">
-        <ul class="header__lang-links">
-            <li a class="header__lang-link"><a class="header__lang-link" href="#">En</a></li>
-            <li a class="header__lang-link"><a class="header__lang-link" href="#">Es</a></li>
-        </ul>
+        <img class="header__logo" src="./images/logo.svg" alt="practicum art gallery logo">
     </header>
     
     <section class="lead">
-        <h1 class="lead__title">From Portland to Portland</h1>
-        <p class="lead__subtitle">An epic bicycle journey from Portland, ME. to Portland, OR</p>
-        <img class="lead__image" src="./images/kalegin-michail.png" alt="mountains in the distance">
-        <p class="lead__caption">Your journey starts here</p>
+        <h1 class="lead__title">From Homeland to Homeland</h1>
+        <p class="lead__subtitle">An epic journey from Kentucky to Burundi through Wales and Ukraine</p>
+        <div class="lead__image"></div>
     </section>
 
     <section class="intro">
-        <h2 class="intro__title">Know the country you live in a little better</h2>
-        <p class="intro__text">That's exactly what we have arranged for you via this travel story</p>
-        <p class="intro__text">Need more action and adventure in your life instead of the same old routine? From Portland, Maine to Portland, Oregon we're going to take you on an exciting journey through some unknown regions of your country. Leave the car at home and travel by bike starting in New England where it all began. You will pass through 12 beautiful states, covering a total of 3,600 miles, and accomplish 3 monumental missions. Partying and taking a selfie with a famous rock star, donating $1 to a billionaire to help eradicate polio in Africa, and even stopping by famous author Stephen King's house to say hi and asking him to sign your favorite book.</p>
-        <ul class="intro__list">
-            <li><span class=" intro__list intro__list_weight_bold">Distance (miles) </span>3,644</li>
-            <li><span class="intro__list intro__list_weight_bold"> Travel time (days) </span>22</li>
-            <li><span class="intro__list intro__list_weight_bold">Highest point (feet) </span>9,613</li>
-            <li><span class="intro__list intro__list_weight_bold">Lowest point (feet) </span>-3</li>   
-        </ul>
+        <h2 class="intro__title">Know the places your online pals come from a little better</h2>
+        <p class="intro__text">Every human being is an artist, a freedom being, called to participate in transforming and reshaping the conditions, thinking, and structures that shape and inform our lives.</p>
+        <p class="intro__text">— Joseph Beuys</p>
+        <p class="intro__text">The town of Practicum has brought together professionals from different corners of the world. Today, Practicum Art Gallery is proud to present stories and pictures from some of the people who dedicate their time and effort to making the future tech professionals of this town feel at home. Each of us has a unique story about the place we come from. Feel free to add your own story and a piece of visual art dedicated to your hometown to our collection. No matter where you're from, we're glad that you're our neighbor.</p>
     </section>
 
     <section class="photo-grid">
-        <img class="photo-grid__item" src="./images/grid_1_1.png" alt="road on the cost">
-        <img class="photo-grid__item" src="./images/grid_1_2.png" alt="lake">
-        <img class="photo-grid__item" src="./images/grid_1_3.png" alt="flock of birds">
-        <img class="photo-grid__item" src="./images/grid_1_4.png" alt="forested mountains">
-        <img class="photo-grid__item" src="./images/grid_2_1.png" alt="lake with morning haze">
-        <img class="photo-grid__item" src="./images/grid_2_2.png" alt="mountains in the distance">
-        <img class="photo-grid__item" src="./images/grid_2_3.png" alt="rocky mountains in the distance">
-        <img class="photo-grid__item" src="./images/grid_2_4.png" alt="white flowre">
-        <img class="photo-grid__item" src="./images/grid_3_1.png" alt="grassy hills">
-        <img class="photo-grid__item" src="./images/grid_3_2.png" alt="an oasis">
-        <img class="photo-grid__item" src="./images/grid_3_3.png" alt="road on the cost">
-        <img class="photo-grid__item" src="./images/grid_3_4.png" alt="road on the cost">
+        <img class="photo-grid__item" src="./images/grid_1_1.png" alt="rainbow by the shore">
+        <img class="photo-grid__item" src="./images/grid_1_2.png" alt="sunrize at the beach">
+        <img class="photo-grid__item" src="./images/grid_1_3.png" alt="church at sunset">
+        <img class="photo-grid__item" src="./images/grid_1_4.png" alt="bridges and rivers">
+        <img class="photo-grid__item" src="./images/grid_2_1.png" alt="wheat feilds">
+        <img class="photo-grid__item" src="./images/grid_2_2.png" alt="green vehicle parking only signs">
+        <img class="photo-grid__item" src="./images/grid_2_3.png" alt="tribius clay and straw tents">
+        <img class="photo-grid__item" src="./images/grid_2_4.png" alt="mountain side farm"> 
     </section>
+
+    <section class="places">
+        <div class="place">
+            <h2 class="place__title">Kyiv, Ukraine</h2>
+            <ul class="place__website">
+                <h3 class="place__url-heading">artist</h3>
+                <a class="place__artist" href="#">Natalia Dolgushina, content producer</a>
+            </ul>
+            <img class="place__image" src="./images/kyiv.png" alt="picture of kyiv, Ukraine">
+            <ul class="place__p-list">
+                <p class="place__paragraph">Kyiv (or Kiev), Ukraine's capital, is a large city located on the shores of the Dnipro river. Of course, no one in their right mind would swim in the river, unless they grew up here, in which case they've probably tried it at some point. Summers are hot here, and the winters are drafty, but the fall and the spring are are absolutely amazing.</p>
+                <p class="place__paragraph">The city itself is a mix of pre-revolution, post-war and soviet architecture, all of it sprinkled with modified balconies. If you're on the right bank of the Dnipro, the landscape is difficult to traverse for people on bikes and those wearing heels. The left bank is considered far less interesting and prestigious though, even by people who live on the far outskirts of the right one.</p>
+            </ul>
+            <button class="buy-btn">
+               <p class="buy-btn__paragraph">Buy this artwork as NFT</p> 
+            </button>
+        </div>
+        <div class="place">
+            <h2 class="place__title">Cricieth, Wales</h2>
+            <ul class="place__website">
+                <h3 class="place__url-heading">artist</h3>
+                <a class="place__artist" href="#">Steffan Warren, lead editor</a>
+                <a class="place__artist" href="#">Kseniya Glagoleva, project manager</a>
+            </ul>
+            <img class="place__image" src="./images/cricieth.png" alt="picture of Cricieth, Wales">
+            <ul class="place__p-list">
+                <p class="place__paragraph">The medieval ruin of Cricieth Castle overlooks the town below from a rock that juts out into the sea. It is thought to have been built by Llewelyn the Great in the 13th century. Some 900 years later, the self-styled Pearl of Wales on the Shores of Snowdonia has become a popular tourist destination during the summer months.</p>
+                <p class="place__paragraph">A short walk down the road from the castle, you can enjoy the world's best ice cream at Cadwalader's, whose secret ingredient is rumored to be locally sourced seaweed. Another claim to fame is the fact that Cricieth won the Wales in Bloom award for five years in a row for its spectacular floral displays around town. It was also home to David Lloyd George, the only Welshman ever to hold the office of Prime Minister of the UK.</p>
+            </ul>
+            <button class="buy-btn">
+               <p class="buy-btn__paragraph">Buy this artwork as NFT</p> 
+            </button>
+        </div>
+        <div class="place">
+            <h2 class="place__title">Berea, USA</h2>
+            <ul class="place__website">
+                <h3 class="place__url-heading">artist</h3>
+                <a class="place__artist" href="#">Travis Turner, author and editor</a>
+            </ul>
+            <img class="place__image" src="./images/berea.png" alt="picture of Berea, USA">
+            <ul class="place__p-list">
+                <p class="place__paragraph">Berea is a small town located in the central part of Kentucky. The town is surrounded by beautiful forests and countryside. It's known as the arts and crafts capital of the state, and visitors will find plenty of shopping opportunities: shops with handmade jewelry, candles, wood items, galleries, glass studios, and more. The town holds a yearly festival celebrating "spoonbread", a local dish made with cornbread and served with a wooden spoon.</p>
+                <p class="place__paragraph">However, it's probably known best for the local college. Berea College was founded in 1855 and was the first college in the south to be racially integrated, as well as the first to be coeducational. Somewhat uniquely, it charges no tuition — every student receives a full-tuition scholarship.</p>
+            </ul>
+            <button class="buy-btn">
+               <p class="buy-btn__paragraph">Buy this artwork as NFT</p> 
+            </button>
+        </div>
+        <div class="place">
+            <h2 class="place__title">Muramvya, Burundi</h2>
+            <ul class="place__website">
+                <h3 class="place__url-heading">artist</h3>
+                <a class="place__artist" href="#">Grevisse Kenguruka, tech editor</a>
+            </ul>
+            <img class="place__image" src="./images/muramvya.png" alt="picture of Muramvya, Burundi">
+            <ul class="place__p-list">
+                <p class="place__paragraph">Muramvya is one of the 18 provinces of Burundi. In the kingdom era, Muramvya was the royal capital and in 2007, because of its cultural and natural landscape, it was added to the UNESCO World Heritage Tentative List. It is located in the center of Burundi, between the country's political and economic capitals</p>
+                <p class="place__paragraph">The weather is rather chilly at night, but during the day, you would think you're in heaven. At 2,665 meters (8,743 ft) above sea level, Mount Teza is one of the coldest places in the province. But that cool breeze allows for one of the largest plantations of tea and coffee in the country, which make up the bulk of Burundi's exports.</p>
+                <p class="place__paragraph">The Kibira National Park, one of the largest wildlife reserves for apes, overlaps four provinces, including Muramvya. This National Park lies at the apex of the beautiful mountains of the Congo-Nile Divide, ranging between 1550 and 2660 meters of altitude. It is filled with beautiful vegetation, and a source for the various rivers and streams which provide water around the country.</p>
+            </ul>
+            <button class="buy-btn">
+               <p class="buy-btn__paragraph">Buy this artwork as NFT</p> 
+            </button>
+        </div>
+        <div class="place">
+            <h2 class="place__title">Kochav-Ya'akov, Israel</h2>
+            <ul class="place__website">
+                <h3 class="place__url-heading">artist</h3>
+                <a class="place__artist" href="#">Nahar Shertz, student in the full-stack development course</a>
+            </ul>
+            <img class="place__image" src="./images/kochav yaakov.jpg" alt="Kochav-Ya'akov, Israel">
+            <ul class="place__p-list">
+                <p class="place__paragraph">Kochav-Ya'akov is a jewish settlement located 10 kolimeters north of the northern exit from Jerusalem. The whole town spreads over a rocky hillside surounded by two small creeks. The people who live in Kochav-Ya'akov are very diverse in their life-style, their Religious sector and, avcorse- their looks and it can be said that the whole town resembles a neiborhood in a city more than a little town in terms of the community activity.</p>
+                <p class="place__paragraph">One of the best parts in Kochav-Ya'akov is the vibrant life of the teenagers. They are constantly doing and planning all year round, mainly focusing on the summer camp for endangered children they run every single summer for the past decade! fortunatly, last year I was privileged to be the boys groups' Coordinator so I got a chance to be a part of this special way of giving to those who need. Many things can be said about Kochav-Ya'akov, but I guarantee that the town is filled with  caring gracefull people and I am happy to be among them all.</p>
+            </ul>
+            <button class="buy-btn">
+               <p class="buy-btn__paragraph">Buy this artwork as NFT</p> 
+            </button>
+        </div>
+    </section>
+
+    <section class="cover">
+        <div class="cover__overlay"></div>
+        <div class="group-9">
+            <h2 class="group-9__title">Visit us</h2>
+            <p class="group-9__subtitle">
+                Year-round <br>
+                Practicum Art Gallery<br>
+                404 Tim Berners-Lee Ave
+            </p>
+            <button class="buy-btn">
+                <p class="buy-btn__paragraph">Buy tickets</p> 
+            </button>
+        </div>
+    </section>
+    
+    <footer class="footer">
+        <p class="footer__copyright">&copy; 2021 Nahar Shertz</p>
+    </footer>
 </body>
 </html>
