--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <div class="place">
             <h2 class="place__title">Kyiv, Ukraine</h2>
             <ul class="place__website">
-                <li><h3 class="place__url-heading">artist</h3></li>
-                <li><a class="place__artist" href="#">Natalia Dolgushina, content producer</a></li>
+                <li class="place__artist"><h3 class="place__url-heading">artist</h3></li>
+                <li class="place__artist"><a class="place__artist" href="#">Natalia Dolgushina, content producer</a></li>
             </ul>
             <img class="place__image" src="./images/kyiv.png" alt="picture of kyiv, Ukraine">
             <div class="place__p-list">
@@ -49,15 +49,15 @@
                 <p class="place__paragraph">The city itself is a mix of pre-revolution, post-war and soviet architecture, all of it sprinkled with modified balconies. If you're on the right bank of the Dnipro, the landscape is difficult to traverse for people on bikes and those wearing heels. The left bank is considered far less interesting and prestigious though, even by people who live on the far outskirts of the right one.</p>
             </div>
             <button class="buy-btn">
-               <p class="buy-btn__paragraph">Buy this artwork as NFT</p> 
+               <a class="buy-btn__paragraph" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy this artwork as NFT</a>
             </button>
         </div>
         <div class="place">
             <h2 class="place__title">Cricieth, Wales</h2>
             <ul class="place__website">
                 <li><h3 class="place__url-heading">artist</h3></li>
-                <li><a class="place__artist" href="#">Steffan Warren, lead editor</a></li>
-                <li><a class="place__artist" href="#">Kseniya Glagoleva, project manager</a></li>
+                <li class="place__artist"><a class="place__artist" href="#">Steffan Warren, lead editor</a></li>
+                <li class="place__artist"><a class="place__artist" href="#">Kseniya Glagoleva, project manager</a></li>
             </ul>
             <img class="place__image" src="./images/cricieth.png" alt="picture of Cricieth, Wales">
             <div class="place__p-list">
@@ -65,14 +65,14 @@
                 <p class="place__paragraph">A short walk down the road from the castle, you can enjoy the world's best ice cream at Cadwalader's, whose secret ingredient is rumored to be locally sourced seaweed. Another claim to fame is the fact that Cricieth won the Wales in Bloom award for five years in a row for its spectacular floral displays around town. It was also home to David Lloyd George, the only Welshman ever to hold the office of Prime Minister of the UK.</p>
             </div>
             <button class="buy-btn">
-               <p class="buy-btn__paragraph">Buy this artwork as NFT</p> 
+                <a class="buy-btn__paragraph" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy this artwork as NFT</a>
             </button>
         </div>
         <div class="place">
             <h2 class="place__title">Berea, USA</h2>
             <ul class="place__website">
-                <li><h3 class="place__url-heading">artist</h3></li>
-                <li><a class="place__artist" href="#">Travis Turner, author and editor</a></li>
+                <li class="place__artist"><h3 class="place__url-heading">artist</h3></li>
+                <li class="place__artist"><a class="place__artist" href="#">Travis Turner, author and editor</a></li>
             </ul>
             <img class="place__image" src="./images/berea.png" alt="picture of Berea, USA">
             <div class="place__p-list">
@@ -80,14 +80,14 @@
                 <p class="place__paragraph">However, it's probably known best for the local college. Berea College was founded in 1855 and was the first college in the south to be racially integrated, as well as the first to be coeducational. Somewhat uniquely, it charges no tuition — every student receives a full-tuition scholarship.</p>
             </div>
             <button class="buy-btn">
-               <p class="buy-btn__paragraph">Buy this artwork as NFT</p> 
+                <a class="buy-btn__paragraph" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy this artwork as NFT</a>
             </button>
         </div>
         <div class="place">
             <h2 class="place__title">Muramvya, Burundi</h2>
             <ul class="place__website">
-                <li><h3 class="place__url-heading">artist</h3></li>
-                <li><a class="place__artist" href="#">Grevisse Kenguruka, tech editor</a></li>
+                <li class="place__artist"></li><h3 class="place__url-heading">artist</h3></li>
+                <li class="place__artist"><a class="place__artist" href="#">Grevisse Kenguruka, tech editor</a></li>
             </ul>
             <img class="place__image" src="./images/muramvya.png" alt="picture of Muramvya, Burundi">
             <div class="place__p-list">
@@ -96,22 +96,22 @@
                 <p class="place__paragraph">The Kibira National Park, one of the largest wildlife reserves for apes, overlaps four provinces, including Muramvya. This National Park lies at the apex of the beautiful mountains of the Congo-Nile Divide, ranging between 1550 and 2660 meters of altitude. It is filled with beautiful vegetation, and a source for the various rivers and streams which provide water around the country.</p>
             </div>
             <button class="buy-btn">
-               <p class="buy-btn__paragraph">Buy this artwork as NFT</p> 
+                <a class="buy-btn__paragraph" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy this artwork as NFT</a> 
             </button>
         </div>
         <div class="place">
             <h2 class="place__title">Kochav-Ya'akov, Israel</h2>
             <ul class="place__website">
-                <li><h3 class="place__url-heading">artist</h3></li>
-                <li><a class="place__artist" href="#">Nahar Shertz, student in the full-stack development course</a></li>
+                <li class="place__artist"><h3 class="place__url-heading">artist</h3></li>
+                <li class="place__artist"><a class="place__artist" href="#">Nahar Shertz, student in the full-stack development course</a></li>
             </ul>
-            <img class="place__image" src="./images/kochav yaakov.jpg" alt="Kochav-Ya'akov, Israel">
+            <img class="place__image" src="./images/kochav_yaakov.jpg" alt="Kochav-Ya'akov, Israel">
             <div class="place__p-list">
                 <p class="place__paragraph">Kochav-Ya'akov is a jewish settlement located 10 kolimeters north of the northern exit from Jerusalem. The whole town spreads over a rocky hillside surounded by two small creeks. The people who live in Kochav-Ya'akov are very diverse in their life-style, their Religious sector and, avcorse- their looks and it can be said that the whole town resembles a neiborhood in a city more than a little town in terms of the community activity.</p>
                 <p class="place__paragraph">One of the best parts in Kochav-Ya'akov is the vibrant life of the teenagers. They are constantly doing and planning all year round, mainly focusing on the summer camp for endangered children they run every single summer for the past decade! fortunatly, last year I was privileged to be the boys groups' Coordinator so I got a chance to be a part of this special way of giving to those who need. Many things can be said about Kochav-Ya'akov, but I guarantee that the town is filled with  caring gracefull people and I am happy to be among them all.</p>
             </div>
             <button class="buy-btn">
-               <p class="buy-btn__paragraph">Buy this artwork as NFT</p> 
+                <a class="buy-btn__paragraph" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy this artwork as NFT</a> 
             </button>
         </div>
     </section>
@@ -120,13 +120,14 @@
         <div class="cover__overlay"></div>
         <div class="group-9">
             <h2 class="group-9__title">Visit us</h2>
-            <p class="group-9__subtitle">
-                Year-round <br>
-                Practicum Art Gallery<br>
-                404 Tim Berners-Lee Ave
-            </p>
+            <ul class="group-9__p-list">
+                <li><p class="group-9__subtitle">Year-round</p></li>
+                <li><p class="group-9__subtitle">Practicum Art Gallery</p></li>
+                <li><p class="group-9__subtitle">404 Tim Berners-Lee Ave</p></li>
+            </ul>
+            
             <button class="buy-btn">
-                <p class="buy-btn__paragraph">Buy tickets</p> 
+                <a class="buy-btn__paragraph" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy tickets</a> 
             </button>
         </div>
     </section>
