--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                 <p class="place__paragraph">Kyiv (or Kiev), Ukraine's capital, is a large city located on the shores of the Dnipro river. Of course, no one in their right mind would swim in the river, unless they grew up here, in which case they've probably tried it at some point. Summers are hot here, and the winters are drafty, but the fall and the spring are are absolutely amazing.</p>
                 <p class="place__paragraph">The city itself is a mix of pre-revolution, post-war and soviet architecture, all of it sprinkled with modified balconies. If you're on the right bank of the Dnipro, the landscape is difficult to traverse for people on bikes and those wearing heels. The left bank is considered far less interesting and prestigious though, even by people who live on the far outskirts of the right one.</p>
             </div>
-            <button class="buy-btn">
-               <a class="buy-btn__paragraph" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy this artwork as NFT</a>
-            </button>
+            <a class="buy-btn" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">
+                <span class="buy-btn__paragraph">Buy this artwork as NFT</span>
+            </a>
         </div>
         <div class="place">
             <h2 class="place__title">Cricieth, Wales</h2>
@@ -64,9 +64,9 @@
                 <p class="place__paragraph">The medieval ruin of Cricieth Castle overlooks the town below from a rock that juts out into the sea. It is thought to have been built by Llewelyn the Great in the 13th century. Some 900 years later, the self-styled Pearl of Wales on the Shores of Snowdonia has become a popular tourist destination during the summer months.</p>
                 <p class="place__paragraph">A short walk down the road from the castle, you can enjoy the world's best ice cream at Cadwalader's, whose secret ingredient is rumored to be locally sourced seaweed. Another claim to fame is the fact that Cricieth won the Wales in Bloom award for five years in a row for its spectacular floral displays around town. It was also home to David Lloyd George, the only Welshman ever to hold the office of Prime Minister of the UK.</p>
             </div>
-            <button class="buy-btn">
-                <a class="buy-btn__paragraph" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy this artwork as NFT</a>
-            </button>
+            <a class="buy-btn" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">
+                <span class="buy-btn__paragraph">Buy this artwork as NFT</span>
+            </a>
         </div>
         <div class="place">
             <h2 class="place__title">Berea, USA</h2>
@@ -79,14 +79,14 @@
                 <p class="place__paragraph">Berea is a small town located in the central part of Kentucky. The town is surrounded by beautiful forests and countryside. It's known as the arts and crafts capital of the state, and visitors will find plenty of shopping opportunities: shops with handmade jewelry, candles, wood items, galleries, glass studios, and more. The town holds a yearly festival celebrating "spoonbread", a local dish made with cornbread and served with a wooden spoon.</p>
                 <p class="place__paragraph">However, it's probably known best for the local college. Berea College was founded in 1855 and was the first college in the south to be racially integrated, as well as the first to be coeducational. Somewhat uniquely, it charges no tuition — every student receives a full-tuition scholarship.</p>
             </div>
-            <button class="buy-btn">
-                <a class="buy-btn__paragraph" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy this artwork as NFT</a>
-            </button>
+            <a class="buy-btn" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">
+                <span class="buy-btn__paragraph">Buy this artwork as NFT</span>
+            </a>
         </div>
         <div class="place">
             <h2 class="place__title">Muramvya, Burundi</h2>
             <ul class="place__website">
-                <li class="place__artist"></li><h3 class="place__url-heading">artist</h3></li>
+                <li class="place__artist"><h3 class="place__url-heading">artist</h3></li>
                 <li class="place__artist"><a class="place__artist" href="#">Grevisse Kenguruka, tech editor</a></li>
             </ul>
             <img class="place__image" src="./images/muramvya.png" alt="picture of Muramvya, Burundi">
@@ -95,9 +95,9 @@
                 <p class="place__paragraph">The weather is rather chilly at night, but during the day, you would think you're in heaven. At 2,665 meters (8,743 ft) above sea level, Mount Teza is one of the coldest places in the province. But that cool breeze allows for one of the largest plantations of tea and coffee in the country, which make up the bulk of Burundi's exports.</p>
                 <p class="place__paragraph">The Kibira National Park, one of the largest wildlife reserves for apes, overlaps four provinces, including Muramvya. This National Park lies at the apex of the beautiful mountains of the Congo-Nile Divide, ranging between 1550 and 2660 meters of altitude. It is filled with beautiful vegetation, and a source for the various rivers and streams which provide water around the country.</p>
             </div>
-            <button class="buy-btn">
-                <a class="buy-btn__paragraph" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy this artwork as NFT</a> 
-            </button>
+            <a class="buy-btn" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">
+                <span class="buy-btn__paragraph">Buy this artwork as NFT</span>
+            </a>
         </div>
         <div class="place">
             <h2 class="place__title">Kochav-Ya'akov, Israel</h2>
@@ -110,9 +110,9 @@
                 <p class="place__paragraph">Kochav-Ya'akov is a jewish settlement located 10 kolimeters north of the northern exit from Jerusalem. The whole town spreads over a rocky hillside surounded by two small creeks. The people who live in Kochav-Ya'akov are very diverse in their life-style, their Religious sector and, avcorse- their looks and it can be said that the whole town resembles a neiborhood in a city more than a little town in terms of the community activity.</p>
                 <p class="place__paragraph">One of the best parts in Kochav-Ya'akov is the vibrant life of the teenagers. They are constantly doing and planning all year round, mainly focusing on the summer camp for endangered children they run every single summer for the past decade! fortunatly, last year I was privileged to be the boys groups' Coordinator so I got a chance to be a part of this special way of giving to those who need. Many things can be said about Kochav-Ya'akov, but I guarantee that the town is filled with  caring gracefull people and I am happy to be among them all.</p>
             </div>
-            <button class="buy-btn">
-                <a class="buy-btn__paragraph" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy this artwork as NFT</a> 
-            </button>
+            <a class="buy-btn" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">
+                <span class="buy-btn__paragraph">Buy this artwork as NFT</span> 
+            </a>
         </div>
     </section>
 
@@ -126,9 +126,9 @@
                 <li><p class="group-9__subtitle">404 Tim Berners-Lee Ave</p></li>
             </ul>
             
-            <button class="buy-btn">
-                <a class="buy-btn__paragraph" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">Buy tickets</a> 
-            </button>
+            <a class="buy-btn" href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq">
+                <span class="buy-btn__paragraph" >Buy tickets</span> 
+            </a>
         </div>
     </section>
     
