--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             Buy this artwork as NFT
           </a>
         </article>
-        <darticle class="place">
+        <article class="place">
           <h2 class="place__title">Kochav-Ya'akov, Israel</h2>
           <div class="place__website">
             <h3 class="place__url-heading">artist</h3>            
