--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </p>
           </div>
           <a
-            class="buy-btn buy-btn_loc_place"
+            class="buy-btn place__btn"
             href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
           >
             Buy this artwork as NFT
@@ -165,7 +165,7 @@
             </p>
           </div>
           <a
-            class="buy-btn buy-btn_loc_place"
+            class="buy-btn place__btn"
             href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
           >
             Buy this artwork as NFT
@@ -203,7 +203,7 @@
             </p>
           </div>
           <a
-            class="buy-btn buy-btn_loc_place"
+            class="buy-btn place__btn"
             href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
           >
             Buy this artwork as NFT
@@ -248,7 +248,7 @@
             </p>
           </div>
           <a
-            class="buy-btn buy-btn_loc_place"
+            class="buy-btn place__btn"
             href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
           >
             Buy this artwork as NFT
@@ -290,7 +290,7 @@
             </p>
           </div>
           <a
-            class="buy-btn buy-btn_loc_place"
+            class="buy-btn place__btn"
             href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
           >
             Buy this artwork as NFT
